--- a/src/sass/components/Form/search_box.module.scss
+++ b/src/sass/components/Form/search_box.module.scss
@@ -1,12 +1,15 @@
 .search_box {
     display: flex;
     width: 80%;
+    height:50px;
     &__input {
+        margin: 0;
         flex-grow: 1;
         padding: 0.7rem 0 0.7rem 0.8rem;
         border: 1px solid #ededed;
         border-radius: 1.5rem 0 0 1.5rem;
         box-shadow: 5px 5px 10px -5px rgba(0,0,0,0.2);
+        font-size: 16px;
 
         &:focus {
             outline: 0;
@@ -15,6 +18,8 @@
     }
 
     &__button{
+        margin: 0;
+        min-width: 50px;
         cursor: pointer;
         padding: .8rem .9rem .8rem .8rem;
         border-radius: 0 1.5rem 1.5rem 0;
