--- a/src/sass/components/Items/top_ad.module.scss
+++ b/src/sass/components/Items/top_ad.module.scss
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@300&display=swap');
+
 .wrapper {
-    width: 300px;
-    height: 600px;
-    background-color: red;
+  font-family: 'Kiwi Maru', serif;
+  width: 300px;
+  height: 600px;
+  background-color: red;
 }
