--- a/src/sass/components/Form/search_box.module.scss
+++ b/src/sass/components/Form/search_box.module.scss
@@ -1,36 +1,42 @@
 .search_box {
-    display: flex;
-    width: 80%;
-    height:50px;
-    &__input {
-        margin: 0;
-        flex-grow: 1;
-        padding: 0.7rem 0 0.7rem 0.8rem;
-        border: 1px solid #ededed;
-        border-radius: 1.5rem 0 0 1.5rem;
-        box-shadow: 5px 5px 10px -5px rgba(0,0,0,0.2);
-        font-size: 16px;
+  display: flex;
+  width: 80%;
+  height: 50px;
+  &__input {
+    margin: 0;
+    flex-grow: 1;
+    padding: 0.7rem 0 0.7rem 0.8rem;
+    border: 1px solid #ededed;
+    border-radius: 1.5rem 0 0 1.5rem;
+    box-shadow: 5px 5px 10px -5px rgba(0, 0, 0, 0.2);
+    font-size: 16px;
 
-        &:focus {
-            outline: 0;
-            border: 1px solid #4ab6f6;
-        }
+    &:focus {
+      outline: 0;
+      border: 1px solid #4ab6f6;
     }
+  }
 
-    &__button{
-        margin: 0;
-        min-width: 50px;
-        cursor: pointer;
-        padding: .8rem .9rem .8rem .8rem;
-        border-radius: 0 1.5rem 1.5rem 0;
-        border: none;
-        background-color: #c3c4c5;
-        color: #fff;
-        font-size: .75rem;
-        box-shadow: 5px 5px 10px -5px rgba(0,0,0,0.2);
+  &__button {
+    margin: 0;
+    min-width: 50px;
+    cursor: pointer;
+    padding: 0.8rem 0.9rem 0.8rem 0.8rem;
+    border-radius: 0 1.5rem 1.5rem 0;
+    border: none;
+    background-color: #c3c4c5;
+    color: #fff;
+    font-size: 0.75rem;
+    box-shadow: 5px 5px 10px -5px rgba(0, 0, 0, 0.2);
 
-        &:hover {
-            color: #4ab6f6;
-        }
+    &:hover {
+      color: #4ab6f6;
     }
+  }
+}
+
+@mixin mobile {
+  @media screen and (min-width: 767px) {
+    @content;
+  }
 }
