--- a/src/sass/components/Items/park.module.scss
+++ b/src/sass/components/Items/park.module.scss
@@ -6,6 +6,30 @@
   height: 120px;
   color: #70d0be;
   display: flex;
+  //animation
+  opacity: 0%;
+  animation-fill-mode: forwards;
+  animation-name: fade;
+  animation-duration: 2s;
+  animation-delay: 1s;
+  animation-iteration-count: 1;
+  @keyframes fade {
+    0% {
+      opacity: 0;
+    }
+    25% {
+      opacity: 0.25;
+    }
+    50% {
+      opacity: 0.5;
+    }
+    75% {
+      opacity: 0.75;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
 
   h2 {
     font-size: 15px;
