--- a/src/sass/components/Items/weather.module.scss
+++ b/src/sass/components/Items/weather.module.scss
@@ -1,31 +1,55 @@
-.weather{
-    min-width: 150px;
-    height: 120px; 
-    color: #70d0be;
-    display: flex;
+.weather {
+  min-width: 150px;
+  height: 120px;
+  color: #70d0be;
+  display: flex;
+  //animation
+  opacity: 0%;
+  animation-fill-mode: forwards;
+  animation-name: fade;
+  animation-duration: 2s;
+  animation-delay: 1.5s;
+  animation-iteration-count: 1;
+  @keyframes fade {
+    0% {
+      opacity: 0;
+    }
+    25% {
+      opacity: 0.25;
+    }
+    50% {
+      opacity: 0.5;
+    }
+    75% {
+      opacity: 0.75;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
 
-    h2{
-        font-size: 15px;
-        text-align: center;
-        position: absolute;
-        top: 65%;
-        left: 20%;
+  h2 {
+    font-size: 15px;
+    text-align: center;
+    position: absolute;
+    top: 65%;
+    left: 20%;
+  }
+  .tenki {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    text-shadow: 0px 3px 6px rgb(0, 0, 0, 0.1);
+
+    .value {
+      font-size: 60px;
+      line-height: 54px;
+      font-weight: bold;
+      position: absolute;
+      top: 65.5%;
+      left: 35%;
+      transform: rotate(0deg);
     }
-    .tenki{
-        text-align: center;
-        display: flex;
-        justify-content: center;
-        align-items: end;
-        text-shadow: 0px 3px 6px rgb(0,0,0,0.1);
-        
-        .value{
-            font-size: 60px;
-            line-height: 54px;
-            font-weight: bold;
-            position:absolute;
-            top:65.5%;
-            left:35%;
-            transform: rotate(0deg);
-        }
-    }
+  }
 }
