--- a/src/sass/components/Layout/Link.module.scss
+++ b/src/sass/components/Layout/Link.module.scss
@@ -1,47 +1,65 @@
-.link{
-    
-    width: 35px;
-    height: 35px;
-    position: relative;
-    display: block;
+@mixin pc {
+  @media screen and (min-width: 767px) {
+    @content;
+  }
+}
 
-    &__one{
-        position: absolute;
-        top: 14%;
-        left: 30%;
-        width: 20px;
-        height: 20px;
-        border-radius: 2px;
-        border-top: 4px solid white;
-        border-right:4px solid white;
-        transform:rotate(-135deg);  
+.link {
+  width: 35px;
+  height: 35px;
+  position: relative;
+  display: block;
 
-    }
+  &__one {
+    position: absolute;
+    top: 14%;
+    left: 30%;
+    width: 20px;
+    height: 20px;
+    border-radius: 2px;
+    border-top: 4px solid white;
+    border-right: 4px solid white;
+    transform: rotate(-135deg);
+  }
 }
 
 .layout {
-    // background: linear-gradient(#66B0A3,white );
-    background-image: url("../../../images/BG.png");
-    background-size: cover;
-    height: 100vh;
+  position: absolute;
+  background-image: url('../../../images/BG.png');
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+  max-width: 414px;
+  max-height: 896px;
+  //   @include pc() {
+  //     background-position: center;
+  //     background-size: contain;
+  //     background-repeat: no-repeat;
+  //   }
+
+  &__wrapper {
+    display: flex;
+    justify-content: center;
+  }
+
+  &__header {
+    position: relative;
     width: 100%;
+    height: 150px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    z-index: 100;
 
-    &__header {
-        width: 100%;
-        height: 150px;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-
-        &__duct {
-            width: 35px;
-            height: 35px;
-        }
+    &__duct {
+      width: 35px;
+      height: 35px;
     }
+  }
 }
 
 .park_name {
-    size: 20px;
-    font-weight: 700;
-    color:white;
+  font-size: 20px;
+  font-weight: 700;
+  color: white;
 }
